# api-documentation

./: .gitignore  DataOneUseCasePrioV.2.doc  Makefile  MethodCrossReference.xls  README.html  README.md  README.txt  about.html  acknowledgements.html  architecture.tmproj  changelog.html  genindex.html  glossary.html  index.html  license_and_copyright_policy.html  objects.inv  overview.html  py-modindex.html  pyproject.toml  readthedocs.yml  requirements.txt  search.html  searchindex.js  setup.py  todo.html
D1_SCHEMA_2_0_1/: cryptographicHashFunctions.rdf  dataoneDebPkgConfigTypes.xsd  dataoneTypes.xsd  dataoneTypes_v1.1.xsd
_sources/: about.txt  changelog.txt
_static/: dataone.css
api_template/: CNAuthorization.py  CNCore.py  CNDiagnostic.py  CNIdentity.py  CNRead.py  CNRegister.py  CNReplication.py  CNView.py  Exceptions.py  MNAuthorization.py  MNCore.py  MNPackage.py  MNQuery.py  MNRead.py  MNReplication.py  MNStorage.py  MNView.py  Types.py
apis/: CN_APIs.html  CN_internal_APIs.html  Exceptions.html  ITK_APIs.html  MN_APIs.html  Types.html  Types11.html  Types2.html  api_substitutions.html  index.html  monitoring.html  rest_comms.html
design/: Authentication.html  AuthnAndAuthzRequirements.html  Authorization-technologies.html  Authorization.html  AuthorizationAndAuthentication.html  CitationManagerSupport.html  ContentImmutability.html  ContentMutability.html  CoordinatingNodeInternals.html  DataPackage.html  EventLogIndexSchema.html  ExternalContent.html  LogAggregator.html  LoggingSchema.html  MemberNodeServicesRegistration.html  NodeIdentity.html  (+38 more)
(+562 files in other folders)
